static/themes/default.css
/* ... */
/**
 * Not connected sign
 */
.kiwi-notconnected {
    margin: 3em 0;
}
.kiwi-notconnected-bigicon {
    text-align: center;
}
.kiwi-notconnected-bigicon > i {
    font-size: 4em;
    cursor: pointer;
}
.kiwi-notconnected-caption {
    text-align: center;
    font-size: 1.2em;
    margin-top: 1em;
    cursor: pointer;
}
.kiwi-notconnected-networksettings {
    display: block;
    font-size: 0.9em;
    margin-top: 1em;
}



/**
 * Network settings
 */

.kiwi-networksettings {
    padding: 1em;
}
.kiwi-networksettings-section {
    margin: 20px 10px 40px 10px;
}
.kiwi-networksettings-danger h3 {
    background: #d86f6f;
    padding: 5px 10px;
}



/**
 * Alias settings
 */
.kiwi-settings-aliases-input {
    width: 80%;
    height: 200px;
    font-size: 0.8em;
    line-height: 1.4em;
    font-family: monospace;
    white-space: nowrap;
    border-color: #cccccc;
}
.kiwi-settings-aliases-showhelp {
    display: block;
}
.kiwi-settings-aliases-help {
    background: #f3f2f2;
    border: 1px dashed gray;
    padding: 1em;
    margin: 1em 0;
}
.kiwi-settings-aliases-help em {
    color: #ab1010;
    background: #fff6a5;
    padding: 1px 2px;
}



/**
 * User box
 */

.kiwi-userbox {
    border: 1px solid #dddddd;
    border-right-width: 0;
    padding: 10px;
    background: #f6f6f6;
    transition: 0.2s top;
    max-width: 50%;
}
@media screen and (max-width: 500px) {
    .kiwi-userbox {
        left: 0;
        right: 0;
        bottom: 40px;
        top: auto !important;
        max-width: 100%;
        border-width: 1px 0;
    }
}
.kiwi-userbox-icon {
    font-size: 2.8em;
    margin-right: 0.3em;
    position: absolute;
}
.kiwi-userbox-header h3 {
    margin: 0 0 0 40px;
    padding: 0;
}
.kiwi-userbox-usermask {
    color: #9e9e9e;
    display: block;
    margin: 0 0 0 40px;
    font-size: 0.9em;
}
.kiwi-userbox-actions a {
    margin-right: 1em;
}
.kiwi-userbox-whois {
    background: #ffffff;
    padding: 5px;
    color: #2c3e50;
    line-height: 1.4em;
    border: 1px dashed #9e9e9e;
}
.kiwi-userbox-whois-line {
    display: block;
}
.kiwi-userbox-actions-op {
    border-top: 1px solid #9e9e9e;
    margin: 0.7em 0 0 0;
    padding: 0.7em 0;
}
.kiwi-userbox-actions-op form label {
    display: block;
    margin-bottom: 0.7em;
}



/**
 * Media viewer
 */

.kiwi-mediaviewer-controls {
    position: absolute;
    top: 0;
    right: 0;
    z-index: 1;
}
.kiwi-mediaviewer-controls-close {
    padding: 3px 15px;
}



/**
 * Misc styles
 */

.kiwi-nick {
}

